# claude-config

./: .cursorrules  .cz.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_OFFICIAL_FILES.md  LEGACY_ARCHIVE_NOTICE.md  NEXT-SESSION-SSH-TASKS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_SHORT.md  bidirectional-sync-demo.md  command-check.md  disable-pyright.sh  gpu-cloud-setup.md  ide  install-all-tools  instant-sync-option.sh  projects  pyrightconfig.json  seamless-sync-setup.md  settings.json  statsig  todos  tts_hook_entry.sh  workspace-registry-research-report.md
agents/: README.md  apcf-agent.md  backtest-strategy-validator.md  compliance-auditor.md  config-conformer.md  context-bound-planner.md  fallback-removal-validator.md  file-structure-organizer.md  mhr-refactor.md  milestone-commit-logger.md  python-import-validator.md  python-qa-agent.md  python-qa.md  research-scout.md  simple-helper.md  sred-evidence-extractor.md  test-agent.md  workspace-refactor.md  workspace-sync.md
agents-disabled/: context-bound-planner.md  research-scout.md
automation/: GITHUB_ISSUE_DRAFT.md  HOOK_TESTING_RECOMMENDATIONS.md  README.md  SINGLE_INSTANCE_PROTECTION.md
cns/: README.md
commands/: README.md  apcf.md  command-agent-check.md  command-check.md  gfm-check.md  mhr.md  python-qa.md  research.md  ruff-fix.md  sync.md  test-reload.md  (+1 more)
docs/: INDEX.md  (+6 more)
scripts/gfm-link-checker/: README.md  pyproject.toml
tools/gfm-link-checker/: GLOBAL_SETUP.md  README.md  gfm_link_checker.py  pyproject.toml  setup-gfm-checker.sh
tools/gfm-link-checker/docs/: README.md
(+2720 files in other folders)
