[project]
name = "gfm-link-checker"
version = "1.0.0"
description = "GitHub Flavored Markdown Link Integrity Checker for Local Workspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
]

[project.scripts]
gfm-check = "gfm_link_checker:main"

[project.urls]
Repository = "https://github.com/terrylica/claude-config"
Documentation = "https://github.com/terrylica/claude-config/tree/master/scripts/gfm-link-checker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
