[project]
name = "gfm-link-checker"
version = "1.0.0"
description = "GitHub Flavored Markdown Link Integrity Checker for Local Workspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mistletoe>=1.4.0",
]

[project.scripts]
gfm-check = "gfm_link_checker:main"

[project.urls]
Repository = "https://github.com/eon-labs/claude-workspace"
Documentation = "https://github.com/eon-labs/claude-workspace/tree/master/tools/gfm-link-checker"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
